--- a/SPContactUsWeb/SPContactUsWeb.csproj
+++ b/SPContactUsWeb/SPContactUsWeb.csproj
@@ -72,7 +72,10 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="assets\chat.png" />
     <Content Include="packages.config" />
+    <None Include="Properties\PublishProfiles\electromorphservices - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\electromorphservices - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Pages\Default.aspx" />
     <Content Include="Scripts\jquery-1.8.2.js" />
